--- a/animais-fantasticos/index.html
+++ b/animais-fantasticos/index.html
@@ -7,21 +7,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/css/style.css">
 
+    <script>
+        document.documentElement.className += ' js'
+    </script>
+
     <title>Animais Fantásticos</title>
 </head>
 <body>
-    <nav class="menu">
+    <nav class="menu js-menu">
         <ul>
-            <li><a href="#">Animais</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#animais">Animais</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            <li><a href="#contato">Contato</a></li>
             <li><a href="https://www.origamid.com">Dev →</a></li>
         </ul>
     </nav>
 
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais js-scroll" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
-        <ul class="animais-lista">
+        <ul class="animais-lista js-tabmenu">
             <li>
                 <img src="img/imagem1.jpg" alt="Imagem">
             </li>
@@ -42,7 +46,7 @@
             </li>
         </ul>
 
-        <div class="animais-descricao">
+        <div class="animais-descricao js-tabcontent">
             <section>
                 <h2>Raposa</h2>
                 <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
@@ -93,9 +97,9 @@
         </div>
     </section>
 
-    <section class="grid-section faq" id="faq">
+    <section class="grid-section faq js-scroll" id="faq">
         <h1 class="titulo">FAQ</h1>
-        <dl class="faq-lista">
+        <dl class="faq-lista js-accordion">
             <dt>Qual a idade dos animais?</dt>
             <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
 
@@ -110,7 +114,7 @@
         </dl>
     </section>
 
-    <section class="grid-section contato" id="contato">
+    <section class="grid-section contato js-scroll" id="contato">
         <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="img/mapa.png" alt="Mapa">
@@ -127,6 +131,6 @@
         <p>Todos os direitos reservados</p>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
