--- a/flexblog/index.html
+++ b/flexblog/index.html
@@ -7,6 +7,7 @@
     <title>FlexBlog</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
