:sparkles: Create CSS styles

--- a/flexblog/index.html
+++ b/flexblog/index.html
@@ -8,7 +8,15 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/superinfo.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/introducao.css">
+    <link rel="stylesheet" href="/css/sobre.css">
+    <link rel="stylesheet" href="/css/produtos.css">
+    <link rel="stylesheet" href="/css/preco.css">
+    <link rel="stylesheet" href="/css/qualidade.css">
+    <link rel="stylesheet" href="/css/newsletter.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <div class="superinfo-bg">
@@ -24,7 +32,7 @@
             <div class="menu-logo">
                 <a href="">FlexBlog</a>
             </div>
-            <nav>
+            <nav class="menu-nav">
                 <ul>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#produtos">Produtos</a></li>
@@ -61,12 +69,12 @@
 
             <div class="produtos-item pink">
                 <h2>Pink</h2>
-                <img src="img/produtos1.jpg" alt="Produtos 2">
+                <img src="img/produtos2.jpg" alt="Produtos 2">
             </div>
 
             <div class="produtos-item blue">
                 <h2>blue</h2>
-                <img src="img/produtos1.jpg" alt="Produtos 3">
+                <img src="img/produtos3.jpg" alt="Produtos 3">
             </div>
         </div>
     </section>
